--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   },
   "dependencies": {
     "axios": "^1.10.0",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.525.0",
     "next": "15.3.5",
     "next-intl": "^4.3.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "react-leaflet": "^5.0.0",
     "react-modal": "^3.16.3",
     "sweetalert2": "^11.22.2"
   },
