--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-NEXT_PUBLIC_BASE_URL=https://saddlebrown-eagle-408332.hostingersite.com/skinzy_backend/public/api
+NEXT_PUBLIC_BASE_URL=https://saddlebrown-eagle-408332.hostingersite.com/api
