--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-icons": "^5.5.0",
     "react-leaflet": "^5.0.0",
     "react-modal": "^3.16.3",
-    "sweetalert2": "^11.22.2"
+    "sweetalert2": "^11.22.2",
+    "swiper": "^11.2.10"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
