--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-NEXT_PUBLIC_BASE_URL=https://saddlebrown-eagle-408332.hostingersite.com/api
+# NEXT_PUBLIC_BASE_URL=https://saddlebrown-eagle-408332.hostingersite.com/api
 
-# NEXT_PUBLIC_BASE_URL=http://127.0.0.1:8000/api
+NEXT_PUBLIC_BASE_URL=http://127.0.0.1:8000/api
