add tanstack react-query

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.85.3",
     "axios": "^1.10.0",
     "framer-motion": "^12.23.12",
     "leaflet": "^1.9.4",
