--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -30,9 +30,13 @@
     "swiper": "^11.2.10"
   },
   "devDependencies": {
+    "@babel/plugin-syntax-import-attributes": "^7.27.1",
+    "@babel/plugin-syntax-jsx": "^7.27.1",
+    "@babel/preset-react": "^7.28.5",
     "@eslint/eslintrc": "^3",
     "@next/bundle-analyzer": "^15.5.0",
     "@tailwindcss/postcss": "^4",
+    "babel-plugin-react-compiler": "^1.0.0",
     "cross-env": "^10.0.0",
     "eslint": "^9",
     "eslint-config-next": "15.3.5",
